--- a/src/components/CircularProducts/circularproducts.scss
+++ b/src/components/CircularProducts/circularproducts.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 .main-container {
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   display: -webkit-flex;
   align-items: center;
